fix: page scrolling height misalignment

--- a/components/PageHeader/PageHeader.module.scss
+++ b/components/PageHeader/PageHeader.module.scss
@@ -4,7 +4,6 @@
   max-width: 86rem;
   margin: 2rem auto;
   h1 {
-    margin-left: 2rem;
     margin-bottom: 1rem;
     font-size: 2.5rem;
     padding: 0;
